fixed overflow for mobile use

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -588,6 +588,7 @@ td {
 
 .tableContainer {
     width: 100vw;
+    overflow:auto;
 }
 
 .table-results {
